--- a/calculator.HTML
+++ b/calculator.HTML
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-32">
-<title>Калькулятор рассрочки</title>
+<meta charset="UTF-8">
+<title>ГЉГ Г«ГјГЄГіГ«ГїГІГ®Г° Г°Г Г±Г±Г°Г®Г·ГЄГЁ</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -14,7 +14,7 @@
         display: flex;
         gap: 20px;
         justify-content: space-between;
-        flex-wrap: wrap; /* адаптация на узких экранах */
+        flex-wrap: wrap; /* Г Г¤Г ГЇГІГ Г¶ГЁГї Г­Г  ГіГ§ГЄГЁГµ ГЅГЄГ°Г Г­Г Гµ */
     }
     .calculator {
         background: #ffffff;
@@ -22,8 +22,8 @@
         padding: 20px;
         box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 
-        flex: 1;          /* все блоки растягиваются одинаково */
-        min-width: 310px; /* не сжимать меньше */
+        flex: 1;          /* ГўГ±ГҐ ГЎГ«Г®ГЄГЁ Г°Г Г±ГІГїГЈГЁГўГ ГѕГІГ±Гї Г®Г¤ГЁГ­Г ГЄГ®ГўГ® */
+        min-width: 310px; /* Г­ГҐ Г±Г¦ГЁГ¬Г ГІГј Г¬ГҐГ­ГјГёГҐ */
     }
     .title {
         font-size: 20px;
@@ -83,51 +83,51 @@
 
 <div class="wrapper">
 
-    <!-- Калькулятор 1 – АГРОПРОМБАНК -->
+    <!-- ГЉГ Г«ГјГЄГіГ«ГїГІГ®Г° 1 вЂ“ ГЂГѓГђГЋГЏГђГЋГЊГЃГЂГЌГЉ -->
     <div class="calculator">
-        <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
-        <div class="subtitle">АГРОПРОМБАНК</div>
-        <div class="hint">Введите общую сумму чека и нажмите рассчитать</div>
+        <div class="title">ГЉГЂГ‹ГњГЉГ“Г‹ГџГ’ГЋГђ ГђГЂГ‘Г‘ГђГЋГ—ГЉГ€</div>
+        <div class="subtitle">ГЂГѓГђГЋГЏГђГЋГЊГЃГЂГЌГЉ</div>
+        <div class="hint">Г‚ГўГҐГ¤ГЁГІГҐ Г®ГЎГ№ГіГѕ Г±ГіГ¬Г¬Гі Г·ГҐГЄГ  ГЁ Г­Г Г¦Г¬ГЁГІГҐ Г°Г Г±Г±Г·ГЁГІГ ГІГј</div>
         <input type="number" class="input sum">
-        <button class="btn">РАССЧИТАТЬ</button>
+        <button class="btn">ГђГЂГ‘Г‘Г—Г€Г’ГЂГ’Гњ</button>
         <table>
-            <tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО, руб</th></tr>
-            <tr><td>АПБ 3 мес.</td><td class="coef">0.955</td><td class="result"></td></tr>
-            <tr><td>АПБ 6 мес.</td><td class="coef">0.93</td><td class="result"></td></tr>
-            <tr><td>АПБ 9 мес.</td><td class="coef">0.90</td><td class="result"></td></tr>
-            <tr><td>АПБ 12 мес.</td><td class="coef">0.875</td><td class="result"></td></tr>
+            <tr><th>ГђГЂГ‘Г‘ГђГЋГ—ГЉГЂ</th><th>ГЉГЋГќГ”Г”.</th><th>Г€Г’ГЋГѓГЋ, Г°ГіГЎ</th></tr>
+            <tr><td>ГЂГЏГЃ 3 Г¬ГҐГ±.</td><td class="coef">0.955</td><td class="result"></td></tr>
+            <tr><td>ГЂГЏГЃ 6 Г¬ГҐГ±.</td><td class="coef">0.93</td><td class="result"></td></tr>
+            <tr><td>ГЂГЏГЃ 9 Г¬ГҐГ±.</td><td class="coef">0.90</td><td class="result"></td></tr>
+            <tr><td>ГЂГЏГЃ 12 Г¬ГҐГ±.</td><td class="coef">0.875</td><td class="result"></td></tr>
         </table>
     </div>
 
-    <!-- Калькулятор 2 – ЭКСИМБАНК -->
+    <!-- ГЉГ Г«ГјГЄГіГ«ГїГІГ®Г° 2 вЂ“ ГќГЉГ‘Г€ГЊГЃГЂГЌГЉ -->
     <div class="calculator">
-        <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
-        <div class="subtitle">ЭКСИМБАНК</div>
-        <div class="hint">Введите общую сумму чека и нажмите рассчитать</div>
+        <div class="title">ГЉГЂГ‹ГњГЉГ“Г‹ГџГ’ГЋГђ ГђГЂГ‘Г‘ГђГЋГ—ГЉГ€</div>
+        <div class="subtitle">ГќГЉГ‘Г€ГЊГЃГЂГЌГЉ</div>
+        <div class="hint">Г‚ГўГҐГ¤ГЁГІГҐ Г®ГЎГ№ГіГѕ Г±ГіГ¬Г¬Гі Г·ГҐГЄГ  ГЁ Г­Г Г¦Г¬ГЁГІГҐ Г°Г Г±Г±Г·ГЁГІГ ГІГј</div>
         <input type="number" class="input sum">
-        <button class="btn">РАССЧИТАТЬ</button>
+        <button class="btn">ГђГЂГ‘Г‘Г—Г€Г’ГЂГ’Гњ</button>
         <table>
-            <tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО, руб</th></tr>
-            <tr><td>ЭксимБанк 3 мес.</td><td class="coef">0.955</td><td class="result"></td></tr>
-            <tr><td>ЭксимБанк 6 мес.</td><td class="coef">0.93</td><td class="result"></td></tr>
-            <tr><td>ЭксимБанк 9 мес.</td><td class="coef">0.90</td><td class="result"></td></tr>
-            <tr><td>ЭксимБанк 12 мес.</td><td class="coef">0.886</td><td class="result"></td></tr>
+            <tr><th>ГђГЂГ‘Г‘ГђГЋГ—ГЉГЂ</th><th>ГЉГЋГќГ”Г”.</th><th>Г€Г’ГЋГѓГЋ, Г°ГіГЎ</th></tr>
+            <tr><td>ГќГЄГ±ГЁГ¬ГЃГ Г­ГЄ 3 Г¬ГҐГ±.</td><td class="coef">0.955</td><td class="result"></td></tr>
+            <tr><td>ГќГЄГ±ГЁГ¬ГЃГ Г­ГЄ 6 Г¬ГҐГ±.</td><td class="coef">0.93</td><td class="result"></td></tr>
+            <tr><td>ГќГЄГ±ГЁГ¬ГЃГ Г­ГЄ 9 Г¬ГҐГ±.</td><td class="coef">0.90</td><td class="result"></td></tr>
+            <tr><td>ГќГЄГ±ГЁГ¬ГЃГ Г­ГЄ 12 Г¬ГҐГ±.</td><td class="coef">0.886</td><td class="result"></td></tr>
         </table>
     </div>
 
-    <!-- Калькулятор 3 – СБЕРБАНК -->
+    <!-- ГЉГ Г«ГјГЄГіГ«ГїГІГ®Г° 3 вЂ“ Г‘ГЃГ…ГђГЃГЂГЌГЉ -->
     <div class="calculator">
-        <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
-        <div class="subtitle">СБЕРБАНК</div>
-        <div class="hint">Введите общую сумму чека и нажмите рассчитать</div>
+        <div class="title">ГЉГЂГ‹ГњГЉГ“Г‹ГџГ’ГЋГђ ГђГЂГ‘Г‘ГђГЋГ—ГЉГ€</div>
+        <div class="subtitle">Г‘ГЃГ…ГђГЃГЂГЌГЉ</div>
+        <div class="hint">Г‚ГўГҐГ¤ГЁГІГҐ Г®ГЎГ№ГіГѕ Г±ГіГ¬Г¬Гі Г·ГҐГЄГ  ГЁ Г­Г Г¦Г¬ГЁГІГҐ Г°Г Г±Г±Г·ГЁГІГ ГІГј</div>
         <input type="number" class="input sum">
-        <button class="btn">РАССЧИТАТЬ</button>
+        <button class="btn">ГђГЂГ‘Г‘Г—Г€Г’ГЂГ’Гњ</button>
         <table>
-            <tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО, руб</th></tr>
-            <tr><td>СберБанк 3 мес.</td><td class="coef">0.96</td><td class="result"></td></tr>
-            <tr><td>СберБанк 6 мес.</td><td class="coef">0.93</td><td class="result"></td></tr>
-            <tr><td>СберБанк 9 мес.</td><td class="coef">0.90</td><td class="result"></td></tr>
-            <tr><td>СберБанк 12 мес.</td><td class="coef">0.88</td><td class="result"></td></tr>
+            <tr><th>ГђГЂГ‘Г‘ГђГЋГ—ГЉГЂ</th><th>ГЉГЋГќГ”Г”.</th><th>Г€Г’ГЋГѓГЋ, Г°ГіГЎ</th></tr>
+            <tr><td>Г‘ГЎГҐГ°ГЃГ Г­ГЄ 3 Г¬ГҐГ±.</td><td class="coef">0.96</td><td class="result"></td></tr>
+            <tr><td>Г‘ГЎГҐГ°ГЃГ Г­ГЄ 6 Г¬ГҐГ±.</td><td class="coef">0.93</td><td class="result"></td></tr>
+            <tr><td>Г‘ГЎГҐГ°ГЃГ Г­ГЄ 9 Г¬ГҐГ±.</td><td class="coef">0.90</td><td class="result"></td></tr>
+            <tr><td>Г‘ГЎГҐГ°ГЃГ Г­ГЄ 12 Г¬ГҐГ±.</td><td class="coef">0.88</td><td class="result"></td></tr>
         </table>
     </div>
 
@@ -149,4 +149,5 @@ document.querySelectorAll('.calculator').forEach(calc => {
 </script>
 
 </body>
+
 </html>
