--- a/calculator.HTML
+++ b/calculator.HTML
@@ -2,152 +2,350 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Êàëüêóëÿòîð ðàññðî÷êè</title>
+<title>Счет для безналичной оплаты</title>
 <style>
     body {
         font-family: Arial, sans-serif;
-        background: #f5f6f8;
+        background: #f0f2f5;
         margin: 0;
         padding: 20px;
-    }
-    .wrapper {
         display: flex;
-        gap: 20px;
-        justify-content: space-between;
-        flex-wrap: wrap; /* àäàïòàöèÿ íà óçêèõ ýêðàíàõ */
+        justify-content: center;
     }
-    .calculator {
-        background: #ffffff;
-        border-radius: 6px;
-        padding: 20px;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 
-        flex: 1;          /* âñå áëîêè ðàñòÿãèâàþòñÿ îäèíàêîâî */
-        min-width: 310px; /* íå ñæèìàòü ìåíüøå */
+    .container {
+        width: 850px;
+        background: #ffffff;
+        padding: 25px 30px;
+        border-radius: 10px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     }
-    .title {
-        font-size: 20px;
+
+    h1 {
+        font-size: 26px;
+        color: #0d47a1;
+        text-align: center;
+        margin-bottom: 25px;
         font-weight: bold;
+        text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
     }
-    .subtitle {
-        color: #d32f2f;
-        font-weight: bold;
-        margin-bottom: 15px;
-    }
-    .hint {
-        margin-bottom: 10px;
-        color: #555;
-    }
-    .input {
-        width: 100%;
-        padding: 10px;
-        font-size: 16px;
-        margin-bottom: 15px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-    }
-    .btn {
-        width: 100%;
-        background: linear-gradient(to right, #1976d2, #0d47a1);
-        color: white;
-        padding: 12px;
-        font-size: 16px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
+
+    .payer-info, .recipient-info {
+        padding: 15px;
+        border-radius: 6px;
         margin-bottom: 20px;
+        font-size: 14px;
     }
+
+    .payer-info {
+        background: #e3f2fd;
+        border: 1px solid #90caf9;
+    }
+
+    .payer-info label {
+        display: block;
+        margin-bottom: 6px;
+        font-weight: bold;
+        font-size: 14px;
+        color: #0d47a1;
+    }
+
+    .payer-info input {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 10px;
+        border-radius: 4px;
+        border: 1px solid #90caf9;
+        font-size: 14px;
+    }
+
+    .recipient-info {
+        background: #e8f5e9;
+        border: 1px solid #81c784;
+        color: #1b5e20;
+    }
+
+    .recipient-info table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+
+    .recipient-info td {
+        padding: 5px;
+        vertical-align: top;
+    }
+
+    .recipient-info td:first-child {
+        font-weight: bold;
+        width: 35%;
+    }
+
     table {
         width: 100%;
         border-collapse: collapse;
+        margin-bottom: 20px;
+    }
+    th, td {
+        padding: 8px;
+        border-bottom: 1px solid #eee;
         font-size: 14px;
+        text-align: left;
     }
     th {
-        text-align: left;
-        padding-bottom: 8px;
-        border-bottom: 1px solid #ddd;
+        background: #1976d2;
+        color: white;
+        font-size: 15px;
+        text-align: center;
     }
-    td {
-        padding: 10px 0;
-        border-bottom: 1px solid #eee;
+    td input {
+        padding: 5px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        font-size: 13px;
+        width: 100%;
+        box-sizing: border-box;
     }
-    .coef {
-        color: #555;
-    }
-    .result {
+
+    /* Установка ширины колонок */
+    td:nth-child(1) input { width: 80px; text-align:center; }   /* Код товара */
+    td:nth-child(2) input { width: 100%; }                      /* Наименование */
+    td:nth-child(3) input { width: 60px; text-align:center; }   /* Кол-во */
+    td:nth-child(4) input { width: 80px; text-align:right; }    /* Цена */
+
+    tfoot td {
         font-weight: bold;
+        font-size: 16px;
     }
+    .total {
+        text-align: right;
+    }
+
+    .btn-generate {
+        margin-top: 10px;
+        width: 100%;
+        padding: 12px;
+        font-size: 16px;
+        background: linear-gradient(to right, #43a047, #2e7d32);
+        color: white;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+        transition: all 0.2s ease;
+    }
+    .btn-generate:hover { opacity: 0.9; }
+    .btn-generate:active { transform: scale(0.98); }
 </style>
 </head>
 <body>
 
-<div class="wrapper">
+<div class="container">
+    <h1>СГЕНЕРИРОВАТЬ СЧЕТ ДЛЯ БЕЗНАЛИЧНОЙ ОПЛАТЫ</h1>
 
-    <!-- Êàëüêóëÿòîð 1 – ÀÃÐÎÏÐÎÌÁÀÍÊ -->
-    <div class="calculator">
-        <div class="title">ÊÀËÜÊÓËßÒÎÐ ÐÀÑÑÐÎ×ÊÈ</div>
-        <div class="subtitle">ÀÃÐÎÏÐÎÌÁÀÍÊ</div>
-        <div class="hint">Ââåäèòå îáùóþ ñóììó ÷åêà è íàæìèòå ðàññ÷èòàòü</div>
-        <input type="number" class="input sum">
-        <button class="btn">ÐÀÑÑ×ÈÒÀÒÜ</button>
+    <!-- Информация о плательщике -->
+    <div class="payer-info">
+        <label>Организация плательщик:</label>
+        <input type="text" id="payer" placeholder="Введите название организации">
+    </div>
+
+    <!-- Информация о получателе (статическая) -->
+    <div class="recipient-info">
         <table>
-            <tr><th>ÐÀÑÑÐÎ×ÊÀ</th><th>ÊÎÝÔÔ.</th><th>ÈÒÎÃÎ, ðóá</th></tr>
-            <tr><td>ÀÏÁ 3 ìåñ.</td><td class="coef">0.955</td><td class="result"></td></tr>
-            <tr><td>ÀÏÁ 6 ìåñ.</td><td class="coef">0.93</td><td class="result"></td></tr>
-            <tr><td>ÀÏÁ 9 ìåñ.</td><td class="coef">0.90</td><td class="result"></td></tr>
-            <tr><td>ÀÏÁ 12 ìåñ.</td><td class="coef">0.875</td><td class="result"></td></tr>
+            <tr>
+                <td>ИП</td>
+                <td>Дворян Вадим Витальевич</td>
+            </tr>
+            <tr>
+                <td>Серия</td>
+                <td>УСН № 1440001838</td>
+            </tr>
+            <tr>
+                <td>Расч. сч.</td>
+                <td>2214050000024165</td>
+            </tr>
+            <tr>
+                <td>Банк</td>
+                <td>ЗАО "Агропромбанк" ф-л г. Рыбница</td>
+            </tr>
         </table>
     </div>
 
-    <!-- Êàëüêóëÿòîð 2 – ÝÊÑÈÌÁÀÍÊ -->
-    <div class="calculator">
-        <div class="title">ÊÀËÜÊÓËßÒÎÐ ÐÀÑÑÐÎ×ÊÈ</div>
-        <div class="subtitle">ÝÊÑÈÌÁÀÍÊ</div>
-        <div class="hint">Ââåäèòå îáùóþ ñóììó ÷åêà è íàæìèòå ðàññ÷èòàòü</div>
-        <input type="number" class="input sum">
-        <button class="btn">ÐÀÑÑ×ÈÒÀÒÜ</button>
-        <table>
-            <tr><th>ÐÀÑÑÐÎ×ÊÀ</th><th>ÊÎÝÔÔ.</th><th>ÈÒÎÃÎ, ðóá</th></tr>
-            <tr><td>ÝêñèìÁàíê 3 ìåñ.</td><td class="coef">0.955</td><td class="result"></td></tr>
-            <tr><td>ÝêñèìÁàíê 6 ìåñ.</td><td class="coef">0.93</td><td class="result"></td></tr>
-            <tr><td>ÝêñèìÁàíê 9 ìåñ.</td><td class="coef">0.90</td><td class="result"></td></tr>
-            <tr><td>ÝêñèìÁàíê 12 ìåñ.</td><td class="coef">0.886</td><td class="result"></td></tr>
-        </table>
-    </div>
+    <!-- Таблица товаров -->
+    <table id="items-table">
+        <thead>
+            <tr>
+                <th>Код</th>
+                <th>Наименование</th>
+                <th>Кол-во</th>
+                <th>Цена, руб</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- 10 строк -->
+            <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+            <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+            <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+            <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+            <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+            <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+            <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+            <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+            <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+            <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="3" class="total">Итого, руб:</td>
+                <td id="total-sum">0</td>
+            </tr>
+        </tfoot>
+    </table>
 
-    <!-- Êàëüêóëÿòîð 3 – ÑÁÅÐÁÀÍÊ -->
-    <div class="calculator">
-        <div class="title">ÊÀËÜÊÓËßÒÎÐ ÐÀÑÑÐÎ×ÊÈ</div>
-        <div class="subtitle">ÑÁÅÐÁÀÍÊ</div>
-        <div class="hint">Ââåäèòå îáùóþ ñóììó ÷åêà è íàæìèòå ðàññ÷èòàòü</div>
-        <input type="number" class="input sum">
-        <button class="btn">ÐÀÑÑ×ÈÒÀÒÜ</button>
-        <table>
-            <tr><th>ÐÀÑÑÐÎ×ÊÀ</th><th>ÊÎÝÔÔ.</th><th>ÈÒÎÃÎ, ðóá</th></tr>
-            <tr><td>ÑáåðÁàíê 3 ìåñ.</td><td class="coef">0.96</td><td class="result"></td></tr>
-            <tr><td>ÑáåðÁàíê 6 ìåñ.</td><td class="coef">0.93</td><td class="result"></td></tr>
-            <tr><td>ÑáåðÁàíê 9 ìåñ.</td><td class="coef">0.90</td><td class="result"></td></tr>
-            <tr><td>ÑáåðÁàíê 12 ìåñ.</td><td class="coef">0.88</td><td class="result"></td></tr>
-        </table>
-    </div>
-
+    <button class="btn-generate" id="calculate-btn">Рассчитать сумму</button>
+    <button class="btn-generate" id="generate-pdf-btn">Скачать PDF</button>
 </div>
 
+<!-- Скрипты -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
 <script>
-document.querySelectorAll('.calculator').forEach(calc => {
-    const btn = calc.querySelector('.btn');
-    btn.addEventListener('click', () => {
-        const sum = parseFloat(calc.querySelector('.sum').value);
-        if (!sum && sum !== 0) return;
-        const coefs = calc.querySelectorAll('td.coef');
-        const results = calc.querySelectorAll('td.result');
-        coefs.forEach((c, i) => {
-            results[i].textContent = (sum / parseFloat(c.textContent)).toFixed(2);
-        });
+function calculateTotal() {
+    let total = 0;
+    const rows = document.querySelectorAll('#items-table tbody tr');
+    rows.forEach(row => {
+        const qty = parseFloat(row.querySelector('.qty').value) || 0;
+        const price = parseFloat(row.querySelector('.price').value) || 0;
+        total += qty * price;
     });
+    document.getElementById('total-sum').textContent = total.toLocaleString('ru-RU', {minimumFractionDigits:2, maximumFractionDigits:2});
+}
+
+// Калькулятор суммы
+document.getElementById('calculate-btn').addEventListener('click', calculateTotal);
+document.querySelectorAll('.qty, .price').forEach(input => {
+    input.addEventListener('input', calculateTotal);
+});
+
+// Генерация PDF
+document.getElementById('generate-pdf-btn').addEventListener('click', () => {
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
+    let yPos = 15;
+
+    doc.setFontSize(16);
+    doc.text("Счет для безналичной оплаты", 105, yPos, {align: "center"});
+    yPos += 10;
+
+    // Дата счета
+    const today = new Date();
+    const dateStr = today.toLocaleDateString('ru-RU');
+    doc.setFontSize(12);
+    doc.text("Дата: " + dateStr, 10, yPos);
+    yPos += 8;
+
+    // Плательщик
+    const payer = document.getElementById('payer').value || "";
+    doc.text("Плательщик:", 10, yPos);
+    doc.text(payer, 50, yPos);
+    yPos += 8;
+
+    // Получатель
+    const recipientData = [
+        ["ИП", "Дворян Вадим Витальевич"],
+        ["Серия", "УСН № 1440001838"],
+        ["Расч. сч.", "2214050000024165"],
+        ["Банк", 'ЗАО "Агропромбанк" ф-л г. Рыбница']
+    ];
+    recipientData.forEach(item => {
+        doc.text(item[0] + ":", 10, yPos);
+        doc.text(item[1], 50, yPos);
+        yPos += 8;
+    });
+    yPos += 4;
+
+    // Таблица товаров
+    const rows = [];
+    document.querySelectorAll('#items-table tbody tr').forEach(tr => {
+        const code = tr.children[0].querySelector('input').value || "";
+        const name = tr.children[1].querySelector('input').value || "";
+        const qty = tr.children[2].querySelector('input').value || "0";
+        const price = tr.children[3].querySelector('input').value || "0";
+        if(code || name || parseFloat(qty) || parseFloat(price)) {
+            rows.push([code, name, qty, price]);
+        }
+    });
+
+    doc.autoTable({
+        startY: yPos,
+        head: [['Код', 'Наименование', 'Кол-во', 'Цена, руб']],
+        body: rows,
+        styles: { fontSize: 10 },
+        headStyles: { fillColor: [25, 118, 210], textColor: 255, halign: 'center' },
+        columnStyles: {
+            0: { halign: 'center', cellWidth: 20 },
+            1: { cellWidth: 80 },
+            2: { halign: 'center', cellWidth: 20 },
+            3: { halign: 'right', cellWidth: 30 }
+        },
+    });
+
+    const total = document.getElementById('total-sum').textContent;
+    const finalY = doc.lastAutoTable.finalY || yPos + 10;
+    doc.setFontSize(12);
+    doc.text("Итого, руб: " + total, 150, finalY + 10, {align: "right"});
+
+    doc.save("Счет.pdf");
 });
 </script>
 
 </body>
-
 </html>
