--- a/beznal.html
+++ b/beznal.html
@@ -193,6 +193,42 @@
                 <td><input type="number" class="qty" min="0" value="0"></td>
                 <td><input type="number" class="price" min="0" value="0"></td>
             </tr>
+                 <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+                 <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+                 <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+                 <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+                 <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
+                 <tr>
+                <td><input type="text" placeholder="Код"></td>
+                <td><input type="text" placeholder="Наименование"></td>
+                <td><input type="number" class="qty" min="0" value="0"></td>
+                <td><input type="number" class="price" min="0" value="0"></td>
+            </tr>
             <!-- Добавь другие строки по аналогии -->
         </tbody>
         <tfoot>
@@ -305,3 +341,4 @@ document.getElementById('generate-pdf-btn').addEventListener('click', () => {
 
 </body>
 </html>
+
