--- a/beznal.html
+++ b/beznal.html
@@ -2,343 +2,190 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Счет для безналичной оплаты</title>
+<title>Счет</title>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        background: #f0f2f5;
-        margin: 0;
-        padding: 20px;
-        display: flex;
-        justify-content: center;
-    }
 
-    .container {
-        width: 850px;
-        background: #ffffff;
-        padding: 25px 30px;
-        border-radius: 10px;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    }
+body{
+    font-family: Arial, sans-serif;
+    background:#f0f2f5;
+    padding:20px;
+}
 
-    h1 {
-        font-size: 26px;
-        color: #0d47a1;
-        text-align: center;
-        margin-bottom: 25px;
-        font-weight: bold;
-        text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
-    }
+.container{
+    width:900px;
+    margin:auto;
+}
 
-    .payer-info, .recipient-info {
-        padding: 15px;
-        border-radius: 6px;
-        margin-bottom: 20px;
-        font-size: 14px;
-    }
+#print-area{
+    background:white;
+    padding:30px;
+}
 
-    .payer-info {
-        background: #e3f2fd;
-        border: 1px solid #90caf9;
-    }
+/* Печатная форма */
+h1{
+    text-align:center;
+    margin-bottom:25px;
+}
 
-    .payer-info label {
-        display: block;
-        margin-bottom: 6px;
-        font-weight: bold;
-        font-size: 14px;
-        color: #0d47a1;
-    }
+table{
+    width:100%;
+    border-collapse:collapse;
+    margin-bottom:20px;
+}
 
-    .payer-info input {
-        width: 100%;
-        padding: 8px;
-        margin-bottom: 10px;
-        border-radius: 4px;
-        border: 1px solid #90caf9;
-        font-size: 14px;
-    }
+th,td{
+    border:1px solid #ccc;
+    padding:8px;
+    font-size:14px;
+}
 
-    .recipient-info {
-        background: #e8f5e9;
-        border: 1px solid #81c784;
-        color: #1b5e20;
-    }
+th{
+    background:#1976d2;
+    color:white;
+}
 
-    .recipient-info table {
-        width: 100%;
-        border-collapse: collapse;
-    }
+input{
+    width:100%;
+    border:none;
+    outline:none;
+    font-size:14px;
+}
 
-    .recipient-info td {
-        padding: 5px;
-        vertical-align: top;
-    }
+.total{
+    text-align:right;
+    font-weight:bold;
+}
 
-    .recipient-info td:first-child {
-        font-weight: bold;
-        width: 35%;
-    }
+.btn{
+    width:100%;
+    padding:12px;
+    margin-top:10px;
+    border:none;
+    background:#2e7d32;
+    color:white;
+    font-size:16px;
+    cursor:pointer;
+}
 
-    table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-bottom: 20px;
-    }
-    th, td {
-        padding: 8px;
-        border-bottom: 1px solid #eee;
-        font-size: 14px;
-        text-align: left;
-    }
-    th {
-        background: #1976d2;
-        color: white;
-        font-size: 15px;
-        text-align: center;
-    }
-    td input {
-        padding: 5px;
-        border-radius: 4px;
-        border: 1px solid #ccc;
-        font-size: 13px;
-        width: 100%;
-        box-sizing: border-box;
-    }
+.btn:hover{
+    opacity:.9;
+}
 
-    /* Установка ширины колонок */
-    td:nth-child(1) input { width: 80px; text-align:center; }   /* Код товара */
-    td:nth-child(2) input { width: 100%; }                      /* Наименование */
-    td:nth-child(3) input { width: 60px; text-align:center; }   /* Кол-во */
-    td:nth-child(4) input { width: 80px; text-align:right; }    /* Цена */
-
-    tfoot td {
-        font-weight: bold;
-        font-size: 16px;
-    }
-    .total {
-        text-align: right;
-    }
-
-    .btn-generate {
-        margin-top: 10px;
-        width: 100%;
-        padding: 12px;
-        font-size: 16px;
-        background: linear-gradient(to right, #43a047, #2e7d32);
-        color: white;
-        border: none;
-        border-radius: 6px;
-        cursor: pointer;
-        transition: all 0.2s ease;
-    }
-    .btn-generate:hover { opacity: 0.9; }
-    .btn-generate:active { transform: scale(0.98); }
 </style>
 </head>
 <body>
 
 <div class="container">
-    <h1>СГЕНЕРИРОВАТЬ СЧЕТ ДЛЯ БЕЗНАЛИЧНОЙ ОПЛАТЫ</h1>
 
-    <!-- Информация о плательщике -->
-    <div class="payer-info">
-        <label>Организация плательщик:</label>
-        <input type="text" id="payer" placeholder="Введите название организации">
-    </div>
+<div id="print-area">
 
-    <!-- Информация о получателе (статическая) -->
-    <div class="recipient-info">
-        <table>
-            <tr>
-                <td>ИП</td>
-                <td>Дворян Вадим Витальевич</td>
-            </tr>
-            <tr>
-                <td>Серия</td>
-                <td>УСН № 1440001838</td>
-            </tr>
-            <tr>
-                <td>Расч. сч.</td>
-                <td>2214050000024165</td>
-            </tr>
-            <tr>
-                <td>Банк</td>
-                <td>ЗАО "Агропромбанк" ф-л г. Рыбница</td>
-            </tr>
-        </table>
-    </div>
+<h1>СЧЕТ НА ОПЛАТУ</h1>
 
-    <!-- Таблица товаров -->
-    <table id="items-table">
-        <thead>
-            <tr>
-                <th>Код</th>
-                <th>Наименование</th>
-                <th>Кол-во</th>
-                <th>Цена, руб</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- 10 строк -->
-            <tr>
-                <td><input type="text" placeholder="Код"></td>
-                <td><input type="text" placeholder="Наименование"></td>
-                <td><input type="number" class="qty" min="0" value="0"></td>
-                <td><input type="number" class="price" min="0" value="0"></td>
-            </tr>
-            <tr>
-                <td><input type="text" placeholder="Код"></td>
-                <td><input type="text" placeholder="Наименование"></td>
-                <td><input type="number" class="qty" min="0" value="0"></td>
-                <td><input type="number" class="price" min="0" value="0"></td>
-            </tr>
-                 <tr>
-                <td><input type="text" placeholder="Код"></td>
-                <td><input type="text" placeholder="Наименование"></td>
-                <td><input type="number" class="qty" min="0" value="0"></td>
-                <td><input type="number" class="price" min="0" value="0"></td>
-            </tr>
-                 <tr>
-                <td><input type="text" placeholder="Код"></td>
-                <td><input type="text" placeholder="Наименование"></td>
-                <td><input type="number" class="qty" min="0" value="0"></td>
-                <td><input type="number" class="price" min="0" value="0"></td>
-            </tr>
-                 <tr>
-                <td><input type="text" placeholder="Код"></td>
-                <td><input type="text" placeholder="Наименование"></td>
-                <td><input type="number" class="qty" min="0" value="0"></td>
-                <td><input type="number" class="price" min="0" value="0"></td>
-            </tr>
-                 <tr>
-                <td><input type="text" placeholder="Код"></td>
-                <td><input type="text" placeholder="Наименование"></td>
-                <td><input type="number" class="qty" min="0" value="0"></td>
-                <td><input type="number" class="price" min="0" value="0"></td>
-            </tr>
-                 <tr>
-                <td><input type="text" placeholder="Код"></td>
-                <td><input type="text" placeholder="Наименование"></td>
-                <td><input type="number" class="qty" min="0" value="0"></td>
-                <td><input type="number" class="price" min="0" value="0"></td>
-            </tr>
-                 <tr>
-                <td><input type="text" placeholder="Код"></td>
-                <td><input type="text" placeholder="Наименование"></td>
-                <td><input type="number" class="qty" min="0" value="0"></td>
-                <td><input type="number" class="price" min="0" value="0"></td>
-            </tr>
-            <!-- Добавь другие строки по аналогии -->
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="3" class="total">Итого, руб:</td>
-                <td id="total-sum">0</td>
-            </tr>
-        </tfoot>
-    </table>
+<p><b>Дата:</b> <span id="date"></span></p>
 
-    <button class="btn-generate" id="calculate-btn">Рассчитать сумму</button>
-    <button class="btn-generate" id="generate-pdf-btn">Скачать PDF</button>
+<p>
+<b>Плательщик:</b>
+<input type="text" id="payer">
+</p>
+
+<h3>Получатель</h3>
+
+<table>
+<tr><td>ИП</td><td>Дворян Вадим Витальевич</td></tr>
+<tr><td>УСН</td><td>1440001838</td></tr>
+<tr><td>Расч. счет</td><td>2214050000024165</td></tr>
+<tr><td>Банк</td><td>ЗАО "Агропромбанк"</td></tr>
+</table>
+
+<h3>Товары</h3>
+
+<table id="items">
+<thead>
+<tr>
+<th>Код</th>
+<th>Наименование</th>
+<th>Кол-во</th>
+<th>Цена</th>
+</tr>
+</thead>
+
+<tbody>
+
+<script>
+for(let i=0;i<10;i++){
+document.write(`
+<tr>
+<td><input></td>
+<td><input></td>
+<td><input type="number" class="qty" value="0"></td>
+<td><input type="number" class="price" value="0"></td>
+</tr>
+`)
+}
+</script>
+
+</tbody>
+
+<tfoot>
+<tr>
+<td colspan="3" class="total">Итого:</td>
+<td id="total">0</td>
+</tr>
+</tfoot>
+
+</table>
+
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+<button class="btn" onclick="calc()">Рассчитать</button>
+<button class="btn" onclick="generatePDF()">Скачать PDF</button>
+
+</div>
+
 <script>
-// Функция для расчета общей суммы
-function calculateTotal() {
-    let total = 0;
-    const rows = document.querySelectorAll('#items-table tbody tr');
-    rows.forEach(row => {
-        const qty = parseFloat(row.querySelector('.qty').value) || 0;
-        const price = parseFloat(row.querySelector('.price').value) || 0;
-        total += qty * price;
-    });
-    document.getElementById('total-sum').textContent = total.toLocaleString('ru-RU', {minimumFractionDigits:2, maximumFractionDigits:2});
+
+document.getElementById("date").textContent =
+new Date().toLocaleDateString("ru-RU");
+
+function calc(){
+let total=0;
+
+document.querySelectorAll("#items tbody tr").forEach(row=>{
+let q=row.querySelector(".qty").value || 0;
+let p=row.querySelector(".price").value || 0;
+total+=q*p;
+});
+
+document.getElementById("total").innerText=
+total.toLocaleString('ru-RU');
 }
 
-// Калькулятор суммы
-document.getElementById('calculate-btn').addEventListener('click', calculateTotal);
-document.querySelectorAll('.qty, .price').forEach(input => {
-    input.addEventListener('input', calculateTotal);
-});
+/* генерация pdf */
+function generatePDF(){
 
-// Генерация PDF
-document.getElementById('generate-pdf-btn').addEventListener('click', () => {
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
-    let yPos = 15;
+calc();
 
-    // Устанавливаем шрифт для кириллицы
-    doc.setFont("helvetica");
+const element = document.getElementById("print-area");
 
-    doc.setFontSize(16);
-    doc.text("СЧЁТ-ФАКТУРА № 39 от 25.02.26", 105, yPos, {align: "center"});
-    yPos += 10;
+const opt = {
+    margin:10,
+    filename:'Счет.pdf',
+    image:{ type:'jpeg', quality:1 },
+    html2canvas:{ scale:2 },
+    jsPDF:{
+        unit:'mm',
+        format:'a4',
+        orientation:'portrait'
+    }
+};
 
-    // Дата счета
-    const today = new Date();
-    const dateStr = today.toLocaleDateString('ru-RU');
-    doc.setFontSize(12);
-    doc.text("Дата: " + dateStr, 10, yPos);
-    yPos += 8;
+html2pdf().set(opt).from(element).save();
+}
 
-    // Плательщик
-    const payer = document.getElementById('payer').value || "";
-    doc.text("Плательщик:", 10, yPos);
-    doc.text(payer, 50, yPos);
-    yPos += 8;
-
-    // Получатель
-    const recipientData = [
-        ["ИП", "Дворян Вадим Витальевич"],
-        ["Серия", "УСН № 1440001838"],
-        ["Расч. сч.", "2214050000024165"],
-        ["Банк", 'ЗАО "Агропромбанк" ф-л г. Рыбница']
-    ];
-    recipientData.forEach(item => {
-        doc.text(item[0] + ":", 10, yPos);
-        doc.text(item[1], 50, yPos);
-        yPos += 8;
-    });
-    yPos += 4;
-
-    // Таблица товаров
-    const rows = [];
-    document.querySelectorAll('#items-table tbody tr').forEach(tr => {
-        const code = tr.children[0].querySelector('input').value || "";
-        const name = tr.children[1].querySelector('input').value || "";
-        const qty = tr.children[2].querySelector('input').value || "0";
-        const price = tr.children[3].querySelector('input').value || "0";
-        if(code || name || parseFloat(qty) || parseFloat(price)) {
-            rows.push([code, name, qty, price]);
-        }
-    });
-
-    doc.autoTable({
-        startY: yPos,
-        head: [['Код', 'Наименование', 'Кол-во', 'Цена, руб']],
-        body: rows,
-        styles: { fontSize: 10 },
-        headStyles: { fillColor: [25, 118, 210], textColor: 255, halign: 'center' },
-        columnStyles: {
-            0: { halign: 'center', cellWidth: 20 },
-            1: { cellWidth: 80 },
-            2: { halign: 'center', cellWidth: 20 },
-            3: { halign: 'right', cellWidth: 30 }
-        },
-    });
-
-    const total = document.getElementById('total-sum').textContent;
-    const finalY = doc.lastAutoTable.finalY || yPos + 10;
-    doc.setFontSize(12);
-    doc.text("Итого, руб: " + total, 150, finalY + 10, {align: "right"});
-
-    doc.save("Счет.pdf");
-});
 </script>
 
 </body>
 </html>
-
